src/importer/exmaralda/snapshots/annatto__importer__exmaralda__tests__bad_timevalue_fail.snap
---
source: src/importer/exmaralda/tests.rs
expression: r.err().unwrap().to_string()
---
Error during importing corpus from ./tests/data/import/exmaralda/fail-bad_timevalue/test_doc.exb with "import_exmaralda": "Failed to parse tli time value."
