src/importer/exmaralda/snapshots/annatto__importer__exmaralda__tests__category_fail.snap
---
source: src/importer/exmaralda/tests.rs
expression: r.err().unwrap()
---
Error during importing corpus to ./tests/data/import/exmaralda/fail-no_category/test_doc.exb with "import_exmaralda": "Tier encountered with undefined category attribute."
